--- a/fullscreen/index.html
+++ b/fullscreen/index.html
@@ -1,7 +1,11 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html>
 <head>
 	<meta charset="UTF-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<!-- Adaptation for a mobile device -->
+	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+	<!----- Top Panel Color --Start-- ----->
 	<!-- Chrome, Firefox OS and Opera -->
     <meta name="theme-color" content="#131419"/>
     <!-- Windows Phone -->
@@ -9,14 +13,19 @@
     <!-- iOS Safari -->
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black-transcluent"/>
-    <!-- Яндекс.Браузер -->
-    <meta content="ya-title=#131419,ya-dock=fade"/>
-	<!-- -----------------------  SHORTCUT ICON  ----------------------- -->
-	<link rel="shortcut icon" href="../img/shortcuticons/icon.jpg" type="image/x-icon">
-	<!-- Адаптив для моб -->
-	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+	<!-- Top Panel Color --End-- -->
+	<!--  SHORTCUT ICON  -->
+	<link rel="shortcut icon" href="img/shortcuticons/icon.jpg" type="image/x-icon">
+	<!-- Site Name -->
 	<title>BB</title>
-	<!-- fonts -->
+	<!-- Описание сайта -->
+	<meta name="description" content="">
+	<!-------------  Не забудь "Вкл" индексацию ------------->
+	<meta name="robots" content="none"/>
+	<!-- The author of the site -->
+	<meta name="author" content="Akylbek u Bektur"/>
+	<!------------- Additional connection --Start-- ------------->
+	<!-- Fonts -->
 	<link rel="stylesheet" href="fonts/icons__button_up/style.css">
 	<!-- Swiper-->
 	<link rel="stylesheet" href="css/swiper-bundle.min.css">
@@ -25,14 +34,15 @@
 	<!-- CSS -->
 	<link rel="stylesheet" href="css/style.css">
 	<link rel="stylesheet" href="css/media-style.css">
+	<!------------- Additional connection --End-- ------------->
 </head>
-<body class="">
-	<!-- <div class="preloader" id="preloader">
+<body>
+	<div class="preloader" id="preloader">
         <div class="preloader__logo">
             <div class="preloader__dowl">
             </div>
         </div>
-    </div> -->
+    </div>
 	<div class="wrapper">
 		<header class="header">
 			<div class="container">
