--- a/menu/index.html
+++ b/menu/index.html
@@ -98,6 +98,23 @@
 									</li>
 								</ul>
 							</li>
+							<li class="menu__list_sublist">
+								<div class="menu__list_sublist-text">
+									<a class="menu__link">Страница №3</a>
+									<span class="menu__arrow"></span>
+								</div>
+								<ul class="menu__sub_list">
+									<li>
+										<a data-goto=".wrapper" class="menu__sub_link">Раздел №1</a>
+									</li>
+									<li>
+										<a data-goto=".page__three" class="menu__sub_link">Раздел №2</a>
+									</li>
+									<li>
+										<a data-goto=".footer" class="menu__sub_link">Раздел №3</a>
+									</li>
+								</ul>
+							</li>
 							<!--------------------  Dropdown list  --End--  -------------------->
 						</ul>
 						<!--------------------  Menu list  --End--  -------------------->
