--- a/menu/index.html
+++ b/menu/index.html
@@ -64,9 +64,9 @@
 		<div class="container">
 			<div class="header__body">
 				<div class="header__logo">
-					<a data-goto=".wrapper" class="header__logo_title">
+					<div class="header__logo_icon">
 						BB
-					</a>
+					</div>
 				</div>
 				<div class="header__menu menu">
 					<!--------------------  Menu "Hamburger" Icon  --Start--  -------------------->
