--- a/menuFixed/index.html
+++ b/menuFixed/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -40,7 +40,7 @@
 	<link rel="stylesheet" href="css/media-style.css"/>
 	<!--------------------  Additional connection  --End--  -------------------->
 </head>
-<body>
+<body class="_lock">
 	<!--------------------  Preloader  --Start--  -------------------->
 	<div class="preloader">
         <div class="preloader__content">
