--- a/menu/index.html
+++ b/menu/index.html
@@ -111,7 +111,7 @@
 										<a data-goto=".page__three" class="menu__sub_link">Раздел №2</a>
 									</li>
 									<li>
-										<a data-goto=".footer" class="menu__sub_link">Раздел №3</a>
+										<a data-goto=".footer" class="menu__sub_link">lINK №3</a>
 									</li>
 								</ul>
 							</li>
