--- a/menuFixed/index.html
+++ b/menuFixed/index.html
@@ -26,7 +26,7 @@
 	<meta name="author" content="Akylbek u Bektur"/>
 	<!--------------------  Additional connection  --Start--  -------------------->
 	<!--------------------  Fonts  -------------------->
-	<link rel="stylesheet" href="fonts/icon-upbutton/style.css"/>
+	<link rel="stylesheet" href="fonts/icon-upload/style.css"/>
 	<!--------------------  Swiper  -------------------->
 	<link rel="stylesheet" href="css/swiper-bundle.min.css"/>
 	<!--------------------  Fancybox -------------------->
@@ -98,6 +98,23 @@
 										</li>
 									</ul>
 								</li>
+								<li class="menu__list_sublist">
+									<div class="menu__list_sublist-text">
+										<a class="menu__link">Страница №4</a>
+										<span class="menu__arrow"></span>
+									</div>
+									<ul class="menu__sub_list">
+										<li>
+											<a data-goto=".wrapper" class="menu__sub_link">Раздел №1</a>
+										</li>
+										<li>
+											<a data-goto=".page__three" class="menu__sub_link">Раздел №2</a>
+										</li>
+										<li>
+											<a data-goto=".footer" class="menu__sub_link">Раздел №3</a>
+										</li>
+									</ul>
+								</li>
 								<!--------------------  Dropdown list  --End--  -------------------->
 							</ul>
 							<!--------------------  Menu list  --End--  -------------------->
@@ -152,8 +169,8 @@
 		<!-----------------------------------  Footer  --End-- ----------------------------------->
 		<!-----------------------------------  Scroll Up Button  --Start-- ----------------------------------->
 		<div class="up__button">
-			<div class="up__button_ico">
-				<span class="icon-up-button icon__upbutton"></span>
+			<div class="upload_icon">
+				<span class="icon-upload icon__upbutton"></span>
 			</div>
 		</div>
 		<!-----------------------------------  Scroll Up Button  --End-- ----------------------------------->
