--- a/menuFixed/index.html
+++ b/menuFixed/index.html
@@ -169,8 +169,8 @@
 		<!-----------------------------------  Footer  --End-- ----------------------------------->
 		<!-----------------------------------  Scroll Up Button  --Start-- ----------------------------------->
 		<div class="up__button">
-			<div class="upload_icon">
-				<span class="icon-upload icon__upbutton"></span>
+			<div class="up__button_icon">
+				<span class="icon-upload"></span>
 			</div>
 		</div>
 		<!-----------------------------------  Scroll Up Button  --End-- ----------------------------------->
