--- a/menuFixed/index.html
+++ b/menuFixed/index.html
@@ -39,7 +39,7 @@
 	<link rel="stylesheet" href="css/media-style.css"/>
 	<!--------------------  Additional connection  --End--  -------------------->
 </head>
-<body class="_lock">
+<body>
 	<!--------------------  Preloader  --Start--  -------------------->
 	<div class="preloader">
         <div class="preloader__content">
@@ -51,11 +51,9 @@
         </div>
     </div>
 	<!--------------------  Preloader  --End--  -------------------->
-
 	<!-----------------------------------  Progress Bar  --Start--  ----------------------------------->
 	<div class="progress"></div>
 	<!-----------------------------------  Progress Bar  --End--  ----------------------------------->
-
 	<!---------------------------------------------  Wrapper  --Start--  --------------------------------------------->
 	<div class="wrapper">
 		<!-----------------------------------  Header  --Start--  ----------------------------------->
@@ -155,7 +153,6 @@
 			</section>
 		</main>
 		<!-----------------------------------  Page  --End-- ----------------------------------->
-
 		<!-----------------------------------  Footer  --Start-- ----------------------------------->
 		<footer class="footer">
 			<div class="container">
@@ -185,6 +182,7 @@
 	<script src="js/script.js"></script>
 	<script src="js/preloader.js"></script>
 	<script src="js/progressbar.js"></script>
+	<script src="js/hiheight.js"></script>
 	<script src="js/anim.js"></script>
 	<script src="js/responsive.js"></script>
 	<script src="js/scroll_up_button.js"></script>
