--- a/spoller/index.html
+++ b/spoller/index.html
@@ -13,7 +13,7 @@
             <div data-spollers data-one-spoller class="spoller__items _items_1">
                 <!-- ====================== -->
                 <div class="spoller__item">
-                    <button tabindex="-1" type="button" data-spoller class="spoller__item_title">
+                    <button tabindex="-1" type="button" data-spoller class="spoller__item_title _active">
                         обычный
                     </button>
                     <div class="spoller__item_text">
@@ -46,14 +46,34 @@
                         Lorem ipsum dolor, sit amet consectetur adipisicing elit. Fuga quos illo molestiae cupiditate, aspernatur autem vero adipisci aut consequuntur earum laboriosam doloremque. Dignissimos iure, maiores consequuntur adipisci explicabo provident quos!
                     </div>
                 </div>
+                <div class="spoller__item">
+                    <button tabindex="-1" type="button" data-spoller class="spoller__item_title">
+                        обычный >=767,min
+                    </button>
+                    <div class="spoller__item_text">
+                        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Fuga quos illo molestiae cupiditate, aspernatur autem vero adipisci aut consequuntur earum laboriosam doloremque. Dignissimos iure, maiores consequuntur adipisci explicabo provident quos!
+                        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Fuga quos illo molestiae cupiditate, aspernatur autem vero adipisci aut consequuntur earum laboriosam doloremque. Dignissimos iure, maiores consequuntur adipisci explicabo provident quos!
+                        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Fuga quos illo molestiae cupiditate, aspernatur autem vero adipisci aut consequuntur earum laboriosam doloremque. Dignissimos iure, maiores consequuntur adipisci explicabo provident quos!
+                    </div>
+                </div>
                 <!-- ====================== -->
             </div>
                 <!-- ====================== -->
-                <div data-spollers="800,max"  class="spoller__items _items_3">
+                <div data-spollers="767,max"  class="spoller__items _items_3">
                     <!-- ====================== -->
                     <div class="spoller__item">
                         <button tabindex="-1" type="button" data-spoller class="spoller__item_title">
-                            обычный <=767,min
+                            обычный <=767,max
+                        </button>
+                        <div class="spoller__item_text">
+                            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Fuga quos illo molestiae cupiditate, aspernatur autem vero adipisci aut consequuntur earum laboriosam doloremque. Dignissimos iure, maiores consequuntur adipisci explicabo provident quos!
+                            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Fuga quos illo molestiae cupiditate, aspernatur autem vero adipisci aut consequuntur earum laboriosam doloremque. Dignissimos iure, maiores consequuntur adipisci explicabo provident quos!
+                            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Fuga quos illo molestiae cupiditate, aspernatur autem vero adipisci aut consequuntur earum laboriosam doloremque. Dignissimos iure, maiores consequuntur adipisci explicabo provident quos!
+                        </div>
+                    </div>
+                      <div class="spoller__item">
+                        <button tabindex="-1" type="button" data-spoller class="spoller__item_title">
+                            обычный <=767,max
                         </button>
                         <div class="spoller__item_text">
                             Lorem ipsum dolor, sit amet consectetur adipisicing elit. Fuga quos illo molestiae cupiditate, aspernatur autem vero adipisci aut consequuntur earum laboriosam doloremque. Dignissimos iure, maiores consequuntur adipisci explicabo provident quos!
