--- a/menu/index.html
+++ b/menu/index.html
@@ -143,7 +143,7 @@
 		</footer>
 		<!-----------------------------------  Footer  --End-- ----------------------------------->
 		<!-----------------------------------  Scroll Up Button  --Start-- ----------------------------------->
-		<div class="up__button">
+		<div data-goto=".wrapper" class="up__button">
 			<div class="up__button_icon">
 				<span class="icon-upload"></span>
 			</div>
