--- a/menuFixed/index.html
+++ b/menuFixed/index.html
@@ -61,7 +61,7 @@
 			<div class="container">
 				<div class="header__body">
 					<div class="header__logo">
-						<div class="header__logo_icon">
+						<div data-goto=".wrapper" class="header__logo_icon">
 							BB
 						</div>
 					</div>
@@ -164,7 +164,7 @@
 		</footer>
 		<!-----------------------------------  Footer  --End-- ----------------------------------->
 		<!-----------------------------------  Scroll Up Button  --Start-- ----------------------------------->
-		<div class="up__button">
+		<div data-goto=".wrapper" class="up__button">
 			<div class="up__button_icon">
 				<span class="icon-upload"></span>
 			</div>
