--- a/menuFixed/index.html
+++ b/menuFixed/index.html
@@ -60,8 +60,8 @@
 		<header class="header">
 			<div class="container">
 				<div class="header__body">
-					<div class="header__logo">
-						<div data-goto=".wrapper" class="header__logo_icon">
+					<div data-goto=".wrapper" class="header__logo">
+						<div class="header__logo_icon">
 							BB
 						</div>
 					</div>
