--- a/menu/index.html
+++ b/menu/index.html
@@ -28,9 +28,9 @@
 	<!--------------------  Fonts  -------------------->
 	<link rel="stylesheet" href="fonts/icon-upload/style.css"/>
 	<!--------------------  Swiper  -------------------->
-	<link rel="stylesheet" href="css/swiper-bundle.min.css"/>
+	<!-- <link rel="stylesheet" href="css/swiper-bundle.min.css"/> -->
 	<!--------------------  Fancybox -------------------->
-	<link rel="stylesheet" href="css/fancybox/jquery.fancybox.min.css"/>
+	<!-- <link rel="stylesheet" href="css/fancybox/jquery.fancybox.min.css"/> -->
 	<!--------------------  CSS  -------------------->
 	<link rel="stylesheet" href="css/preloader.css"/>
 	<link rel="stylesheet" href="css/progressbar.css"/>
@@ -154,16 +154,16 @@
 	<!-----------------------------------  Script  --Start-- ----------------------------------->
 	<script src="js/jquery.min.js"></script>
 	<!--------------------  Swiper  -------------------->
-	<script src="css/swiper-bundle.min.js"></script>
+	<!-- <script src="css/swiper-bundle.min.js"></script> -->
 	<!--------------------  Fancybox  -------------------->
-	<script src="css/fancybox/jquery.fancybox.min.js"></script>
+	<!-- <script src="css/fancybox/jquery.fancybox.min.js"></script> -->
 	<!--------------------  My Script  -------------------->
-	<script src="js/script.js"></script>
 	<script src="js/preloader.js"></script>
 	<script src="js/progressbar.js"></script>
 	<script src="js/anim.js"></script>
 	<script src="js/responsive.js"></script>
 	<script src="js/scroll_up_button.js"></script>
+	<script src="js/script.js"></script>
 	<!--------------------  No Script  -------------------->
 	<noscript>
 		<div class="noscript__content">
