--- a/spoller/index.html
+++ b/spoller/index.html
@@ -3,87 +3,93 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
     <title>111</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="wrapper">
         <div class="container">
-            <div data-spollers data-one-spoller class="spoller__items _items_1">
-                <!-- ====================== -->
-                <div class="spoller__item">
-                    <button tabindex="-1" type="button" data-spoller class="spoller__item_title _active">
+            <!---------------------------------------------  SPOILERS --Start--  --------------------------------------------->
+            <!--------------------  Spoilers Accordion  --Start--  -------------------->
+            <div data-spoilers data-one-spoiler class="spoiler__items _items_1">
+                <!--------------------  Spoiler Items  --Start--  -------------------->
+                <div class="spoiler__item">
+                    <button tabindex="-1" type="button" data-spoiler class="spoiler__item_title _active">
                         обычный
                     </button>
-                    <div class="spoller__item_text">
+                    <div class="spoiler__item_text">
                         Lorem ipsum dolor, sit amet consectetur adipisicing elit. Fuga quos illo molestiae cupiditate, aspernatur autem vero adipisci aut consequuntur earum laboriosam doloremque. Dignissimos iure, maiores consequuntur adipisci explicabo provident quos!
                         Lorem ipsum dolor, sit amet consectetur adipisicing elit. Fuga quos illo molestiae cupiditate, aspernatur autem vero adipisci aut consequuntur earum laboriosam doloremque. Dignissimos iure, maiores consequuntur adipisci explicabo provident quos!
                         Lorem ipsum dolor, sit amet consectetur adipisicing elit. Fuga quos illo molestiae cupiditate, aspernatur autem vero adipisci aut consequuntur earum laboriosam doloremque. Dignissimos iure, maiores consequuntur adipisci explicabo provident quos!
                     </div>
                 </div>
-                <div class="spoller__item">
-                    <button tabindex="-1" type="button" data-spoller class="spoller__item_title">
+                <div class="spoiler__item">
+                    <button tabindex="-1" type="button" data-spoiler class="spoiler__item_title">
                         обычный
                     </button>
-                    <div class="spoller__item_text">
+                    <div class="spoiler__item_text">
                         Lorem ipsum dolor, sit amet consectetur adipisicing elit. Fuga quos illo molestiae cupiditate, aspernatur autem vero adipisci aut consequuntur earum laboriosam doloremque. Dignissimos iure, maiores consequuntur adipisci explicabo provident quos!
                         Lorem ipsum dolor, sit amet consectetur adipisicing elit. Fuga quos illo molestiae cupiditate, aspernatur autem vero adipisci aut consequuntur earum laboriosam doloremque. Dignissimos iure, maiores consequuntur adipisci explicabo provident quos!
                         Lorem ipsum dolor, sit amet consectetur adipisicing elit. Fuga quos illo molestiae cupiditate, aspernatur autem vero adipisci aut consequuntur earum laboriosam doloremque. Dignissimos iure, maiores consequuntur adipisci explicabo provident quos!
                     </div>
                 </div>
+                <!--------------------  Spoiler Items  --End--  -------------------->
             </div>
-            <!-- ============ -->
-            <div data-spollers="767,min" class="spoller__items _items_2">
-                <!-- ====================== -->
-                <div class="spoller__item">
-                    <button tabindex="-1" type="button" data-spoller class="spoller__item_title">
+            <!--------------------  Spoilers Accordion  --End--  -------------------->
+            <!--------------------  Spoilers Min 767 px  --Start--  -------------------->
+            <div data-spoilers="767,min" class="spoiler__items _items_2">
+                <!--------------------  Spoiler Items   --Start--  -------------------->
+                <div class="spoiler__item">
+                    <button tabindex="-1" type="button" data-spoiler class="spoiler__item_title">
                         обычный >=767,min
                     </button>
-                    <div class="spoller__item_text">
+                    <div class="spoiler__item_text">
                         Lorem ipsum dolor, sit amet consectetur adipisicing elit. Fuga quos illo molestiae cupiditate, aspernatur autem vero adipisci aut consequuntur earum laboriosam doloremque. Dignissimos iure, maiores consequuntur adipisci explicabo provident quos!
                         Lorem ipsum dolor, sit amet consectetur adipisicing elit. Fuga quos illo molestiae cupiditate, aspernatur autem vero adipisci aut consequuntur earum laboriosam doloremque. Dignissimos iure, maiores consequuntur adipisci explicabo provident quos!
                         Lorem ipsum dolor, sit amet consectetur adipisicing elit. Fuga quos illo molestiae cupiditate, aspernatur autem vero adipisci aut consequuntur earum laboriosam doloremque. Dignissimos iure, maiores consequuntur adipisci explicabo provident quos!
                     </div>
                 </div>
-                <div class="spoller__item">
-                    <button tabindex="-1" type="button" data-spoller class="spoller__item_title">
+                <div class="spoiler__item">
+                    <button tabindex="-1" type="button" data-spoiler class="spoiler__item_title">
                         обычный >=767,min
                     </button>
-                    <div class="spoller__item_text">
+                    <div class="spoiler__item_text">
                         Lorem ipsum dolor, sit amet consectetur adipisicing elit. Fuga quos illo molestiae cupiditate, aspernatur autem vero adipisci aut consequuntur earum laboriosam doloremque. Dignissimos iure, maiores consequuntur adipisci explicabo provident quos!
                         Lorem ipsum dolor, sit amet consectetur adipisicing elit. Fuga quos illo molestiae cupiditate, aspernatur autem vero adipisci aut consequuntur earum laboriosam doloremque. Dignissimos iure, maiores consequuntur adipisci explicabo provident quos!
                         Lorem ipsum dolor, sit amet consectetur adipisicing elit. Fuga quos illo molestiae cupiditate, aspernatur autem vero adipisci aut consequuntur earum laboriosam doloremque. Dignissimos iure, maiores consequuntur adipisci explicabo provident quos!
                     </div>
                 </div>
-                <!-- ====================== -->
+                <!--------------------  Spoiler Items  --End--  -------------------->
             </div>
-                <!-- ====================== -->
-                <div data-spollers="767,max"  class="spoller__items _items_3">
-                    <!-- ====================== -->
-                    <div class="spoller__item">
-                        <button tabindex="-1" type="button" data-spoller class="spoller__item_title">
-                            обычный <=767,max
-                        </button>
-                        <div class="spoller__item_text">
-                            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Fuga quos illo molestiae cupiditate, aspernatur autem vero adipisci aut consequuntur earum laboriosam doloremque. Dignissimos iure, maiores consequuntur adipisci explicabo provident quos!
-                            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Fuga quos illo molestiae cupiditate, aspernatur autem vero adipisci aut consequuntur earum laboriosam doloremque. Dignissimos iure, maiores consequuntur adipisci explicabo provident quos!
-                            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Fuga quos illo molestiae cupiditate, aspernatur autem vero adipisci aut consequuntur earum laboriosam doloremque. Dignissimos iure, maiores consequuntur adipisci explicabo provident quos!
-                        </div>
+            <!--------------------  Spoilers Min 767px  --End--  -------------------->
+            <!--------------------  Spoilers Max 767px  --Start--  -------------------->
+            <div data-spoilers="767,max"  class="spoiler__items _items_3">
+                <!--------------------  Spoiler Items  --Start--  -------------------->
+                <div class="spoiler__item">
+                    <button tabindex="-1" type="button" data-spoiler class="spoiler__item_title">
+                        обычный <=767,max
+                    </button>
+                    <div class="spoiler__item_text">
+                        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Fuga quos illo molestiae cupiditate, aspernatur autem vero adipisci aut consequuntur earum laboriosam doloremque. Dignissimos iure, maiores consequuntur adipisci explicabo provident quos!
+                        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Fuga quos illo molestiae cupiditate, aspernatur autem vero adipisci aut consequuntur earum laboriosam doloremque. Dignissimos iure, maiores consequuntur adipisci explicabo provident quos!
+                        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Fuga quos illo molestiae cupiditate, aspernatur autem vero adipisci aut consequuntur earum laboriosam doloremque. Dignissimos iure, maiores consequuntur adipisci explicabo provident quos!
                     </div>
-                      <div class="spoller__item">
-                        <button tabindex="-1" type="button" data-spoller class="spoller__item_title">
-                            обычный <=767,max
-                        </button>
-                        <div class="spoller__item_text">
-                            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Fuga quos illo molestiae cupiditate, aspernatur autem vero adipisci aut consequuntur earum laboriosam doloremque. Dignissimos iure, maiores consequuntur adipisci explicabo provident quos!
-                            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Fuga quos illo molestiae cupiditate, aspernatur autem vero adipisci aut consequuntur earum laboriosam doloremque. Dignissimos iure, maiores consequuntur adipisci explicabo provident quos!
-                            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Fuga quos illo molestiae cupiditate, aspernatur autem vero adipisci aut consequuntur earum laboriosam doloremque. Dignissimos iure, maiores consequuntur adipisci explicabo provident quos!
-                        </div>
-                    </div>
-                    <!-- ====================== -->
                 </div>
-                <!-- ================= -->
+                    <div class="spoiler__item">
+                    <button tabindex="-1" type="button" data-spoiler class="spoiler__item_title">
+                        обычный <=767,max
+                    </button>
+                    <div class="spoiler__item_text">
+                        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Fuga quos illo molestiae cupiditate, aspernatur autem vero adipisci aut consequuntur earum laboriosam doloremque. Dignissimos iure, maiores consequuntur adipisci explicabo provident quos!
+                        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Fuga quos illo molestiae cupiditate, aspernatur autem vero adipisci aut consequuntur earum laboriosam doloremque. Dignissimos iure, maiores consequuntur adipisci explicabo provident quos!
+                        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Fuga quos illo molestiae cupiditate, aspernatur autem vero adipisci aut consequuntur earum laboriosam doloremque. Dignissimos iure, maiores consequuntur adipisci explicabo provident quos!
+                    </div>
+                </div>
+                <!--------------------  Spoiler Items  --End--  -------------------->
+            </div>
+            <!--------------------  Spoilers Max 767px  --End--  -------------------->
+            <!---------------------------------------------  SPOILERS  --End--  --------------------------------------------->
         </div>
     </div>
     <script src="script.js"></script>
