--- a/menu/index.html
+++ b/menu/index.html
@@ -75,7 +75,7 @@
 					<nav class="menu__body">
 						<!--------------------  Menu list  --Start--  -------------------->
 						<ul class="menu__list">
-							<li><a data-goto=".wrapper" class="menu__link _activeLink">Главная</a></li>
+							<li><a data-goto=".wrapper" class="menu__link">Главная</a></li>
 							<li><a data-goto=".page__one" class="menu__link">Страница №1</a></li>
 							<li><a data-goto=".page__two" class="menu__link">Страница №2</a></li>
 							<!--------------------  Dropdown list  --Start--  -------------------->
