--- a/menu/index.html
+++ b/menu/index.html
@@ -40,7 +40,7 @@
 
 <body>
 	<!--------------------  Preloader  --Start--  -------------------->
-	<div class="preloader">
+	<!-- <div class="preloader">
 		<div class="preloader__content">
 			<div class="preloader__downloads">
 				<div class="preloader__downloads_icon preloader__icon_first"></div>
@@ -48,13 +48,13 @@
 				<div class="preloader__downloads_icon preloader__icon_third"></div>
 			</div>
 		</div>
-	</div>
+	</div> -->
 	<!--------------------  Preloader  --End--  -------------------->
 	<!-----------------------------------  Progress Bar  --Start--  ----------------------------------->
 	<div class="progress"></div>
 	<!-----------------------------------  Progress Bar  --End--  ----------------------------------->
 	<!---------------------------------------------  Wrapper  --Start--  --------------------------------------------->
-	<div class="wrapper _done">
+	<div class="wrapper">
 		<!-----------------------------------  Header  --Start--  ----------------------------------->
 		<header class="header">
 			<div class="container">
