--- a/menu/index.html
+++ b/menu/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 
 <head>
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<!--------------------  Meta Viewport Adaptation for a mobile device  -------------------->
-	<meta name="viewport" id="metaViewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+	<meta name="viewport" id="metaViewport"
+		content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
 	<!--------------------  Top Panel Color --Start--  -------------------->
 	<!-------------------- Chrome, Firefox OS and Opera -------------------->
 	<meta name="theme-color" content="#131419" />
@@ -40,7 +41,7 @@
 
 <body>
 	<!--------------------  Preloader  --Start--  -------------------->
-	<!-- <div class="preloader">
+	<div class="preloader">
 		<div class="preloader__content">
 			<div class="preloader__downloads">
 				<div class="preloader__downloads_icon preloader__icon_first"></div>
@@ -48,7 +49,7 @@
 				<div class="preloader__downloads_icon preloader__icon_third"></div>
 			</div>
 		</div>
-	</div> -->
+	</div>
 	<!--------------------  Preloader  --End--  -------------------->
 	<!-----------------------------------  Progress Bar  --Start--  ----------------------------------->
 	<div class="progress"></div>
