--- a/menuFixed/index.html
+++ b/menuFixed/index.html
@@ -29,9 +29,9 @@
 	<!--------------------  Fonts  -------------------->
 	<link rel="stylesheet" href="fonts/icon-upload/style.css" />
 	<!--------------------  Swiper  -------------------->
-	<!-- <link rel="stylesheet" href="css/swiper-bundle.min.css"/> -->
+	<!-- <link rel="stylesheet" href="library/swiper/swiper-bundle.min.css"/> -->
 	<!--------------------  Fancybox -------------------->
-	<!-- <link rel="stylesheet" href="css/fancybox/jquery.fancybox.min.css"/> -->
+	<!-- <link rel="stylesheet" href="library/fancybox/jquery.fancybox.min.css"/> -->
 	<!--------------------  CSS  -------------------->
 	<link rel="stylesheet" href="css/style.css" />
 	<link rel="stylesheet" href="css/media-style.css" />
@@ -179,11 +179,11 @@
 	</div>
 	<!---------------------------------------------  Wrapper  --End--  --------------------------------------------->
 	<!-----------------------------------  Script  --Start-- ----------------------------------->
-	<script src="js/jquery.min.js"></script>
+	<script src="library/jquery/jquery.min.js"></script>
 	<!--------------------  Swiper  -------------------->
-	<!-- <script src="css/swiper-bundle.min.js"></script> -->
+	<!-- <script src="library/swiper/swiper-bundle.min.js"></script> -->
 	<!--------------------  Fancybox  -------------------->
-	<!-- <script src="css/fancybox/jquery.fancybox.min.js"></script> -->
+	<!-- <script src="library/fancybox/jquery.fancybox.min.js"></script> -->
 	<!--------------------  My Script  -------------------->
 	<script src="js/preloader.js"></script>
 	<script src="js/progressbar.js"></script>
