--- a/lazyload/index.html
+++ b/lazyload/index.html
@@ -1,18 +1,17 @@
 <!DOCTYPE html>
 <html lang="ru">
-
 <head>
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title></title>
 	<link rel="stylesheet" href="css/style.css">
+	<link rel="stylesheet" href="css/media-style.css">
 </head>
-
 <body>
 	<div class="wrapper">
 		<main class="page">
-			<div class="page__container">
+			<div class="container">
 				<section class="page__section page__section_1">
 					<div class="page__title">я Заголовок</div>
 					<div class="page__text">
@@ -79,8 +78,7 @@
 				<!--------------------  Lazy Map  --Start--  -------------------->
 				<section class="page__section page__section_3">
 					<div class="page__title">я Заголовок</div>
-					<div class="page__map _load-map"
-						data-map="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d11695.42496788602!2d74.57878717714902!3d42.87587833000757!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x389ec814d930061b%3A0xd8c2ecc30d396f15!2s!5e0!3m2!1sru!2skg!4v1634928630409!5m2!1sru!2skg">
+					<div class="page__map _load-map" data-map="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d11695.42496788602!2d74.57878717714902!3d42.87587833000757!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x389ec814d930061b%3A0xd8c2ecc30d396f15!2s!5e0!3m2!1sru!2skg!4v1634928630409!5m2!1sru!2skg">
 					</div>
 				</section>
 				<!--------------------  Lazy Map  --End--  -------------------->
@@ -129,7 +127,7 @@
 			</div>
 		</main>
 	</div>
-	<script src="js/script.js"></script>
+	<script src="js/lazyload.js"></script>
 </body>
 
 </html>
